# domain-grabber-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: grabber.rs  main.rs  ui.rs
