[package]
name = "domain-grabber-cli"
version = "0.1.0"
edition = "2021"
authors = ["decryptable <decryptable1337@gmail.com>"]
description = "A CLI tool to grab domains"
readme = "README.md"

[profile.release]
strip = "symbols"
debug = false
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[build]
target = "x86_64-unknown-linux-gnu"

[target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu"

[target.x86_64-pc-windows-gnu]
image = "ghcr.io/cross-rs/x86_64-pc-windows-gnu"

[target.x86_64-apple-darwin]
image = "ghcr.io/cross-rs/x86_64-apple-darwin"

[target.aarch64-apple-darwin]
image = "ghcr.io/cross-rs/aarch64-apple-darwin"


[dependencies]
chalk_rs = "1.0.1"
clap = { version = "4.5.28", features = ["derive"] }
figlet-rs = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", default_features = false, features = ["json", "rustls-tls"] }
spinners = "4.1.1"
inquire = { version = "0.7.5", features = ["date"] }
chrono = "0.4.39"
debugoff = { version = "0.2.1", features = ["obfuscate", "syscallobf"] }
obfstr = "0.4.4"
